# RuleVis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: RULEVIS_PRODUCT_GUIDE.md
src/: rulevis.py
src/internal/: analyzer.py  authz.py  config.py  crypto.py  db.py  differ.py  exporter.py  generator.py  github_source.py  health.py  migrate.py  oidc.py  tenancy.py  totp.py  visualizer.py  wazuh_api.py  webhooks.py
tests/: conftest.py  test_api_keys.py  test_app_routes.py  test_auth_and_permissions.py  test_lockout_and_rate_limit.py  test_retention.py  test_secrets_encryption.py  test_sso_oidc.py  test_tenant_lifecycle.py  test_webhooks.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  app.css  icons.tsx  main.tsx  theme.css
web/src/components/: GraphCanvas.tsx  HeatmapModal.tsx  Logo.tsx  RequireAuth.tsx  RootRedirect.tsx  RuleDetail.tsx  Shell.tsx  StatsPanel.tsx  TenantLayout.tsx  TenantSwitcher.tsx
web/src/components/settings/: AuditLogTab.tsx  IntegrationsTab.tsx  LoginActivityTab.tsx  ProfileTab.tsx  SystemSettingsTab.tsx  TenantsTab.tsx  UnmappedFilesTab.tsx  UsersTab.tsx  WorkspaceTab.tsx  editors.tsx
web/src/lib/: api.ts  auth.tsx  permissions.ts  tenantContext.ts  types.ts  useTenant.ts
web/src/pages/: AcceptInvite.tsx  Bootstrap.tsx  Compare.tsx  Home.tsx  Login.tsx  NoAccess.tsx  Rules.tsx  Settings.tsx  Visualizer.tsx
