[build-system]
requires = ["setuptools>=77.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rulevis"
version = "2.0.0"
description = "Multi-tenant rule intelligence platform for Wazuh — RBAC, MFA, live sync, audit logging, webhooks, and OIDC SSO on top of an interactive rule dependency graph"
readme = "README.md"
requires-python = ">=3.9"

license = "MIT"
license-files = ["LICEN[CS]E*"]

authors = [
    { name = "Zafer Balkan", email = "zafer@zaferbalkan.com" },
    { name = "QuantumDef1337" },
]
keywords = ["wazuh", "detection", "security", "monitoring", "logging", "siem", "rbac", "multi-tenant"]
classifiers = [
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

dependencies = [
    "Flask>=3.0.0",
    "networkx",
    "waitress",
    "SQLAlchemy>=2.0",
    "cryptography",
    "python-jose",
]

[project.optional-dependencies]
dev = ["pytest"]
# Only needed if RULEVIS_DATABASE_URL points at Postgres — SQLite (the
# zero-config default) needs no extra driver.
postgres = ["psycopg2-binary"]

[project.urls]
Homepage = "https://github.com/QuantumDef1337/RuleVis"
Repository = "https://github.com/QuantumDef1337/RuleVis"
Issues = "https://github.com/QuantumDef1337/RuleVis/issues"
OriginalProject = "https://github.com/zbalkan/rulevis"

[project.scripts]
rulevis = "rulevis:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["rulevis"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# "*.*" alone only matches files directly inside internal/static/ — it does
# NOT recurse into internal/static/dist/ (the built frontend Flask serves in
# production), which silently produced installable wheels missing the UI
# entirely. The explicit dist/* and dist/assets/* patterns fix that; dist/**/*
# is added too in case a future frontend build ever nests assets deeper.
"internal.static" = ["*.*", "dist/*", "dist/assets/*", "dist/**/*"]